--- a/package.json
+++ b/package.json
@@ -11,15 +11,28 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
+    "@google-cloud/secret-manager": "^4.2.0",
+    "@thirdweb-dev/auth": "^2.0.39",
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
     "ethers": "^5.6.8",
-    "next": "^13",
-    "react": "^18.2",
-    "react-dom": "^18.2"
+    "next": "^13.1.2",
+    "next-auth": "^4.18.8",
+    "nprogress": "^0.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-instantsearch-dom": "^6.38.3",
+    "react-toastify": "^9.1.1",
+    "truncate-eth-address": "^1.0.2"
   },
   "devDependencies": {
+    "@types/react": "18.0.27",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.11.0",
-    "eslint-config-next": "^13"
+    "eslint-config-next": "^13.1.2",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
   }
 }
