--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@google-cloud/secret-manager": "^4.2.0",
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
+    "@thirdweb-dev/storage": "^1.0.6",
     "ethers": "^5.6.8",
     "next": "^13.1.2",
     "next-auth": "^4.18.8",
+    "npm": "^9.4.2",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
