--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@google-cloud/secret-manager": "^4.2.0",
+    "@sanity/client": "^5.2.2",
     "@thirdweb-dev/react": "^3.9.0",
     "@thirdweb-dev/sdk": "^3.9.0",
     "@thirdweb-dev/storage": "^1.0.6",
     "ethers": "^5.7.2",
     "next": "^13.1.2",
     "next-auth": "^4.18.8",
+    "next-sanity": "^4.1.5",
     "npm": "^9.4.2",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
