--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@thirdweb-dev/sdk": "^3.9.0",
     "@thirdweb-dev/storage": "^1.0.6",
     "ethers": "^5.7.2",
+    "ethers-aws-kms-signer": "^1.3.2",
     "next": "^13.1.2",
     "next-auth": "^4.18.8",
     "next-sanity": "^4.1.5",
