--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@thirdweb-dev/react": "^3.9.0",
     "@thirdweb-dev/sdk": "^3.9.0",
     "@thirdweb-dev/storage": "^1.0.6",
+    "@vercel/analytics": "^1.0.0",
     "bignumber.js": "^9.1.1",
     "ethers": "^5.7.2",
     "ethers-aws-kms-signer": "^1.3.2",
+    "framer-motion": "^10.12.4",
     "mathjs": "^11.7.0",
     "next": "^13.1.2",
     "next-auth": "^4.18.8",
